# EDA

./: .gitignore
AC01/q1/: CMakeLists.txt  Node.h  Tree.hpp  main.cpp
AC01/q2/: CMakeLists.txt  Tree.hpp  main.cpp
AC01/q3/: CMakeLists.txt  Node.hpp  Tree.hpp  main.cpp
AC01/q4/: CMakeLists.txt  bst.h  main.cpp
AC02/: CMakeLists.txt  Node.hpp  Set.h  main  main.cpp
TRABALHO_FINAL/: AVL_Tree.hpp  CMakeLists.txt  ChainedHashTable.hpp  Dictionary.hpp  FileUtils.hpp  IDataStruct.hpp  Iterator.hpp  RB_Node.hpp  RB_Tree.hpp  TestUtils.hpp  TimeCheckerUtil.hpp  freq  main.cpp  test.txt
TRABALHO_FINAL/avl_tree/: AVLNode.hpp  AVL_Iterator.hpp  AVL_Tree.hpp
TRABALHO_FINAL/chained_hashtable/: ChainedHashTable.hpp  Chained_Iterator.hpp
TRABALHO_FINAL/open_hashtable/: OpenHashTable.hpp  OpenHash_Iterator.hpp  Slot.hpp
TRABALHO_FINAL/rb_tree/: RB_Iterator.hpp  RB_Node.hpp  RB_Tree.hpp
heap-ex/: CMakeLists.txt  heap.hpp  main.cpp
heaps/: CMakeLists.txt  main.cpp  min_heap.hpp
listas/lista01/: BTree.hpp  CMakeLists.txt  main.cpp
